Fix z-index

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,6 +1,7 @@
 /* Footer */
 
 footer {
+  z-index: 1000;
   margin-top: 5em;
   padding-top: 2em;
   background-color: $color;
