--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,12 +15,12 @@
 /* Loader */
 
 #loader {
+  z-index: 999;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99999;
   text-align: center;
   background-color: white;
 
